// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when listing resources 3`] = `
<div
  class="singleKeyValue-pair"
>
  <dt
    class="singleKeyValue-pair__label"
  >
    <span
      class="ant-typography ant-typography-secondary"
    >
      Commodity Id
    </span>
  </dt>
  <dd
    class="singleKeyValue-pair__value"
  >
    <span
      class="ant-typography"
    >
      e50eb835-7827-4001-b233-e1dda721d4e8
    </span>
  </dd>
</div>
`;

exports[`renders correctly when listing resources 4`] = `
<div
  class="singleKeyValue-pair"
>
  <dt
    class="singleKeyValue-pair__label"
  >
    <span
      class="ant-typography ant-typography-secondary"
    >
      Name
    </span>
  </dt>
  <dd
    class="singleKeyValue-pair__value"
  >
    <span
      class="ant-typography"
    >
      Amoxicillin 250mg Tablets
    </span>
  </dd>
</div>
`;

exports[`renders correctly when listing resources 5`] = `
<div
  class="singleKeyValue-pair"
>
  <dt
    class="singleKeyValue-pair__label"
  >
    <span
      class="ant-typography ant-typography-secondary"
    >
      Active
    </span>
  </dt>
  <dd
    class="singleKeyValue-pair__value"
  >
    <span
      class="ant-typography"
    >
      Disabled
    </span>
  </dd>
</div>
`;

exports[`renders correctly when listing resources: Header title 1`] = `
<span
  class="ant-page-header-heading-title"
  title="Commodity List"
>
  Commodity List
</span>
`;

exports[`renders correctly when listing resources: table row 1 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Albendazole 400mg Tablets
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 1 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/6f3980e0-d1d6-4a7a-a950-939f3ca7b301"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Amoxicillin 250mg Tablets
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 2 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/e50eb835-7827-4001-b233-e1dda721d4e8"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Artemether 20mg + Lumefatrine 120mg (1x6) Tablets
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 3 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/90b10fdb-592c-47b6-a265-c8806a15d77c"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Artemether 20mg + Lumefatrine 120mg (2x6) Tablets
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 4 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/dde1cd4f-bef4-4d2b-ad1b-f63b639ed254"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Artesunate 100mg Suppository Strips
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 5 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/592181bc-0a68-47bc-8275-ac853bba1b09"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 6 page 1 1`] = `
<td
  class="ant-table-cell"
>
  AS (25mg) + AQ (67.5mg) ( 2-11months) Tablets
</td>
`;

exports[`renders correctly when listing resources: table row 6 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 6 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 6 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/b339a63b-84db-45e8-b357-7fcce3bddc34"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 7 page 1 1`] = `
<td
  class="ant-table-cell"
>
  AS (50mg) + AQ (135mg) ( 1-5years) Tablets
</td>
`;

exports[`renders correctly when listing resources: table row 7 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 7 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 7 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/7c5c3eb6-0382-4c7b-8c2d-3abfb31d29f4"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 8 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Dispensing Bags for Tablets (s)
</td>
`;

exports[`renders correctly when listing resources: table row 8 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 8 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 8 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/9aa4d38c-1c8c-11ed-861d-0242ac120002"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 9 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Dispensing Envelopes
</td>
`;

exports[`renders correctly when listing resources: table row 9 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 9 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 9 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/3e5529c8-1c8d-11ed-861d-0242ac120002"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 10 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Disposable Gloves
</td>
`;

exports[`renders correctly when listing resources: table row 10 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 10 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 10 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/1a06dc73-575f-4cff-9424-c95605ba7c30"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 11 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Examination Gloves (Nitrile) Large
</td>
`;

exports[`renders correctly when listing resources: table row 11 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 11 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 11 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/961eb18c-1c8e-11ed-861d-0242ac120002"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 12 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Examination Gloves (Nitrile) Medium
</td>
`;

exports[`renders correctly when listing resources: table row 12 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 12 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 12 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/23c0fed8-1c8e-11ed-861d-0242ac120002"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 13 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Examination Gloves (Nitrile) Small
</td>
`;

exports[`renders correctly when listing resources: table row 13 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 13 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 13 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/8e6fc3e6-1c8d-11ed-861d-0242ac120002"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 14 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Face Mask, Surgical
</td>
`;

exports[`renders correctly when listing resources: table row 14 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 14 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 14 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/75a7f6ec-1c8f-11ed-861d-0242ac120002"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 15 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Face Shield (Flexible, Disposable)
</td>
`;

exports[`renders correctly when listing resources: table row 15 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 15 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 15 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/3b603f72-22b1-40f9-b2e0-5e9c3df7003f"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 16 page 1 1`] = `
<td
  class="ant-table-cell"
>
  MNP
</td>
`;

exports[`renders correctly when listing resources: table row 16 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 16 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 16 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/3af23539-850a-44ed-8fb1-d4999e2145ff"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 17 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Goggles
</td>
`;

exports[`renders correctly when listing resources: table row 17 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 17 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 17 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/21fc9958-1c8f-11ed-861d-0242ac120002"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 18 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Hand sanitizer gel 250ml w/ pump
</td>
`;

exports[`renders correctly when listing resources: table row 18 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 18 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 18 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/6e7d2b70-1c90-11ed-861d-0242ac120002"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 19 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Male Condoms
</td>
`;

exports[`renders correctly when listing resources: table row 19 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 19 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 19 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/951da426-1506-4cab-b03e-5583bdf0ca76"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 20 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Microgynon
</td>
`;

exports[`renders correctly when listing resources: table row 20 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    Disabled
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 20 page 1 3`] = `
<td
  class="ant-table-cell"
/>
`;

exports[`renders correctly when listing resources: table row 20 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/commodity/add-edit/f2734756-a6bb-4e90-bbc6-1c34f51d3d5c"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;
